--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <input type="email" name="" id="" placeholder="Email">
         <input type="file" name="" id=""><br>
         <input type="reset" value="Clear">
+        <input type="submit" value="Send">
     </form>
 </body>
 </html>
