--- a/Project with HTML and CSS/testCSS.html
+++ b/Project with HTML and CSS/testCSS.html
@@ -5,18 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="hover-min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
     <!--style Utilizado para escribir solo codigo CSS-->
     <!--link Para referenciar un archivo css-->
 <link rel="stylesheet" href="template.css">
-<p>
-    Testing CSS
-</p>
-    <!--id Es utilizado para llamar al tag de la forma mas comoda que el desarrollador quiera-->
+
+</head>
+<body>
+
+<!--div es un tag que se utiliza para crear divisiones en la pagina web-->
+<div class="header">
+    <nav id='menu'>
+        <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
+        <ul>
+          <li><a href='http://'>Home</a></li>
+          <li><a class='dropdown-arrow' href='http://'>Products</a>
+            <ul class='sub-menus'>
+              <li><a href='http://'>Products 1</a></li>
+              <li><a href='http://'>Products 2</a></li>
+              <li><a href='http://'>Products 3</a></li>
+              <li><a href='http://'>Products 4</a></li>
+            </ul>
+          </li>
+          <li><a href='http://'>About</a></li>
+          <li><a class='dropdown-arrow' href='http://'>Services</a>
+            <ul class='sub-menus'>
+              <li><a href='http://'>Services 1</a></li>
+              <li><a href='http://'>Services 2</a></li>
+              <li><a href='http://'>Services 3</a></li>
+            </ul>
+          </li>
+          <li><a href='http://'>Contact Us</a></li>
+        </ul>
+      </nav>
+</div>
+
+<div class="main">
+ <!--id Es utilizado para llamar al tag de la forma mas comoda que el desarrollador quiera-->
 <p id="first-paragraph">
     Testing Paragraph
 </p>
+
+<p>
+    Testing CSS
+</p>
+
 
 <p id="second-paragraph">
     Testing Second Paragraph
@@ -25,7 +61,12 @@
 <p class="third-paragraph big">
     Testing the Third Paragraph using class
 </p>
+<a class="button hvr-buzz-out" href="http://google.com" target="_blank">Go to Google</a>
 
+<div class="footer">
+
+
+</div>
 </body>
 
 
